# cv-studio

./: .gitignore  pyproject.toml
src/opencvstudio/: __main__.py  application.py  dataops.py  gtkhelper.py  main.py  version.py
src/opencvstudio/engine/: __init__.py
src/opencvstudio/opmodel/: __init__.py  uimodel.py
src/opencvstudio/ops/: box_ops.py  color_ops.py
src/opencvstudio/primitives/: __init__.py  color.py  error.py  image.py
src/opencvstudio/ui/: application.py  gtkhelper.py  imageview.py  main.py  mainwindow.py  opstore.py
src/pyhotreload/: __main__.py  xreload.py
tests/: conftest.py  test_xreload.py
tests/filetests/: enum.py  function.py  function_args.py  method.py  slots.py
