[tool.poetry]
name = "openCvStudio"
version = "0.1.0"
description = ""
authors = ["R1tschY <r1tschy@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.3.0"
pytesseract = "^0.3.4"
PyGObject = "^3.36.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
